WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111678
Custom Element Refactoring: CustomElementConstructor API shouldn't bound to HTMLElement
https://bugs.webkit.org/show_bug.cgi?id=111678
Summary
Custom Element Refactoring: CustomElementConstructor API shouldn't bound to H...
Hajime Morrita
Reported
2013-03-06 21:11:20 PST
It should be designed on Element, not on HTMLElement.
Attachments
Patch
(28.61 KB, patch)
2013-03-06 21:39 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2013-03-06 21:39:37 PST
Created
attachment 191916
[details]
Patch
Kentaro Hara
Comment 2
2013-03-06 21:43:07 PST
Comment on
attachment 191916
[details]
Patch LGTM
Hajime Morrita
Comment 3
2013-03-06 21:43:49 PST
thx!
WebKit Review Bot
Comment 4
2013-03-06 22:34:32 PST
Comment on
attachment 191916
[details]
Patch Clearing flags on attachment: 191916 Committed
r145040
: <
http://trac.webkit.org/changeset/145040
>
WebKit Review Bot
Comment 5
2013-03-06 22:34:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug